up_swg_delete_semogaberhaill
