# controller/coba.go
@@ -199,6 +199,17 @@ func UpdateData(c *fiber.Ctx) error {
 }
 
 //delete data 
+// DeleteCustomerByID godoc
+// @Summary Delete data customer.
+// @Description Hapus data customer.
+// @Tags Customer
+// @Accept json
+// @Produce json
+// @Param id path string true "Masukan ID"
+// @Success 200
+// @Failure 400
+// @Failure 500
+// @Router /delete/{id} [delete]
 func DeleteCustomerByID(c *fiber.Ctx) error {
 	id := c.Params("id")
 	if id == "" {
